--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,16 @@ a {
   padding: 0;
   margin: 0;
 }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1; /* This makes the main content take up all available space, pushing the footer down */
+}
